Fixed some scaling issues present on mobile with the Portraits and Footer, and added the rest of the officers

--- a/src/components/Footer.css
+++ b/src/components/Footer.css
@@ -47,10 +47,12 @@
 
     .ContactUsText {
         margin-left: 0;
+        margin-bottom: 10px;
     }
 
     .TextContainer {
         margin-left: 0;
         margin-right: 0;
+        margin-bottom: 30px;
     }
 }
