--- a/src/pages/Page.css
+++ b/src/pages/Page.css
@@ -148,9 +148,6 @@
 
 .Row {
     margin-top: 50px;
-    /* display: flex;
-    align-items: flex-start;
-    justify-content: center; */
     width: 50%;
     text-align: center;
     display: inline-flex;
@@ -174,9 +171,14 @@
     }
 
     .RowSection {
-        margin-left: auto;
-        margin-right: auto;
+        margin-left: 5% !important;
+        margin-right: 5% !important;
     }
+
+    /* .Portrait {
+        margin-left: 5%;
+        margin-right: 5%;
+    } */
 }
 
 .Portrait {
